--- a/dev/GLObjViewer.vcxproj.filters
+++ b/dev/GLObjViewer.vcxproj.filters
@@ -125,6 +125,9 @@
     <None Include="Content\Shaders\fp_common_variables.glsl">
       <Filter>Resource Files\fp</Filter>
     </None>
+    <None Include="Content\Shaders\fp_final_fragment_new.glsl">
+      <Filter>Resource Files\fp</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Include Files">
